# fastapi-rss

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint-frontend.sh  docker-entrypoint.sh  pyproject.toml  test_rss.py
.github/workflows/: docker-publish.yml
app/: admin.py  ai_summary.py  auth.py  database.py  main.py  models.py  routes.py  rss_parser.py
data/: rss_data.db
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/api/: index.js
frontend/src/components/: ThemeToggle.vue
frontend/src/components/ui/: badge.vue  button.vue  card-content.vue  card-header.vue  card-title.vue  card.vue  input.vue  select.vue
frontend/src/composables/: useTheme.ts
frontend/src/router/: index.js
frontend/src/views/: Admin.vue  Reader.vue
worker/: celery_app.py  tasks.py
