[project]
name = "fastapi-rss"
version = "0.1.0"
description = "RSS订阅服务端，支持定时轮询更新"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "celery>=5.4.0",
    "feedparser>=6.0.11",
    "sqlalchemy>=2.0.36",
    "duckdb>=1.1.0",
    "redis>=5.2.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.2",
]
